# Crack_Code_Interview

./: .gitignore  CMakeLists.txt  README.md
1_Array_and_Strings/: CMakeLists.txt  IsUnique.cpp  OneAway.cpp  ParlindromePermutation.cpp  StringCompression.cpp  StringRotation.cpp  URLify.cpp  checkPermutation.cpp  check_permutation.cpp  isUnique.cpp  is_unique.cpp  main.cpp  oneAway.cpp  parlindromePermutation.cpp  stringCompression.cpp  test.cpp
2_Linked_List/: CMakeLists.txt  DeleteMiddleNode.cpp  Intersection.h  KthElementToLast.cpp  LinkedList.h  LoopDetection.h  Palindrome.cpp  Partition.cpp  RemoveDups.cpp  SumList.cpp  test.cpp
4_Binary_Tree/: BinarySearchTree.h  BinaryTree.h  CMakeLists.txt  CheckBalanced.h  MinimalTree.h  ValidateBST.h  test.cpp
5_Bit_Manupulate/: CMakeLists.txt  FlipBitToWin.cpp  Insertion.cpp  test.cpp
Arrays/: 6.1.cpp  6.11.cpp  6.13.cpp  6.16.cpp  6.17.cpp  6.18.cpp  6.2.cpp  6.4.cpp  6.5.cpp  6.6.cpp  6.7.cpp  AdvanceThroughArray.h  ApplyPermutation.h  ArrayPartition.h  BuySellStockOnce.h  CMakeLists.txt  DeleteDuplicates.h  DutchNationalFlag.h  IntegerIncrement.cpp  NextPermutation.h  SampleOfflineData.h  test.cpp
BinarySearchTrees/: 15.1.h  15.11.h  15.12.h  15.2.h  15.3.h  15.4.h  15.6.h  15.9.h  BST.h  CMakeLists.txt  test.cpp
BinaryTrees/: 10.1.cpp  10.1.h  10.10.cpp  10.10.h  10.14.cpp  10.2.cpp  10.2.h  10.3.cpp  10.3.h  10.5.cpp  10.5.h  10.6.cpp  10.6.h  10.7.cpp  10.7.h  10.8.cpp  10.8.h  10.9.cpp  10.9.h  BinaryTree.h  (+2 more)
GreedyAlgorithms/: 18.1.cpp  18.2.cpp  18.3.cpp  18.4.cpp  18.5.cpp  CMakeLists.txt  test.cpp
(+93 files in other folders)
