cmake_minimum_required(VERSION 3.0)
project(Crack_Code_Interview)

add_subdirectory(Primitive_Types)
add_subdirectory(1_Array_and_Strings)
add_subdirectory(2_Linked_List)
add_subdirectory(4_Binary_Tree)
add_subdirectory(5_Bit_Manupulate)
add_subdirectory(Arrays)
add_subdirectory(Strings)
add_subdirectory(LinkedList)
add_subdirectory(StacksQueues)
add_subdirectory(BinaryTrees)
add_subdirectory(Heaps)